improving dark mode colors and minor fix

--- a/index.scss
+++ b/index.scss
@@ -13,6 +13,7 @@ body {
 
 .main-view {
   width: 320px;
+  min-height: 360px;
   font-family: "Lexend";
   display: flex;
   flex-direction: column;
